--- a/chrome/browser/resources/settings/default_browser_page/default_browser_page.html
+++ b/chrome/browser/resources/settings/default_browser_page/default_browser_page.html
@@ -9,15 +9,19 @@
   <template>
     <style include="settings-shared"></style>
     <div class="settings-card">
-      <div class="settings-box first">[[message_]]</div>
-      <div class="settings-box">
+      <div class="settings-box first">
         <template is="dom-if" if="[[showButton_]]">
-          <paper-button on-tap="onSetDefaultBrowserTap_"
-              >[[i18n('defaultBrowserMakeDefault')]]</paper-button>
+          <div on-tap="onSetDefaultBrowserTap_">
+            <div>[[i18n('defaultBrowser')]]</div>
+            <div class="secondary">[[i18n('defaultBrowserMakeDefault')]]</div>
+          </div>
           <template is="dom-if" if="[[showError_]]">
             <iron-icon icon="error" class="error-icon"
                 title="[[i18n('unableToSetDefaultBrowser')]]"></iron-icon>
           </template>
+        </template>
+        <template is="dom-if" if="[[!showButton_]]">
+          <div class="secondary">[[message_]]</div>
         </template>
       </div>
     </div>
